--- a/plog/frontend/static/css/plog.css
+++ b/plog/frontend/static/css/plog.css
@@ -15,6 +15,14 @@ body {
 #header {
 }
 
+#header img {
+  margin-left: 0.5em;
+}
+
+#header ul li:first-child {
+  padding-left: 0.5em !important;
+}
+
 #menu {
   width: 100%;
   height: 43px;
@@ -79,6 +87,7 @@ input.search_field {
 }
 
 #logs table {
+  font-size: small;
   border: 1px solid #ccc;
   width: 100%;
 }
